test_files/fails/t_eval_rec1.ar
let rec test = \(a : int) ->
    delay((adv (wait keyboard) + 1));
